--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
 <section class="text-center py-28 px-6 max-w-3xl mx-auto fade-in-slide-up delay-1 select-none">
     <h2 class="text-6xl md:text-7xl font-extrabold mb-5">
-        Hi, I'm Nathanial
+        Hi, I'm Nathanial, better known as Mango
     </h2>
     <p class="text-2xl md:text-3xl max-w-xl mx-auto leading-relaxed">
         I'm a passionate learner who's currently pursuing the difficult path of computer engineering
