--- a/index.html
+++ b/index.html
@@ -21,66 +21,79 @@
     }
 " class="scroll-smooth">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>nathanialihart</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Inter', sans-serif;
-            background: white;
-            color: black;
-            transition: background 0.8s, color 0.8s;
-        }
-        .dark body { background: black; color: white; }
-        #loader {
-            position: fixed; inset: 0; background: black;
-            display: flex; align-items: center; justify-content: center;
-            z-index: 50; transition: opacity 0.8s;
-        }
-        .fade-out { opacity: 0; pointer-events: none; }
-        h1 {
-            font-weight: 900; font-size: 2.25rem; text-align: center;
-            animation: glow 2s ease-in-out infinite alternate;
-            color: white;
-        }
-        .light h1 { color: black; }
-        @keyframes glow {
-            from { text-shadow: 0 0 8px currentColor; }
-            to { text-shadow: 0 0 20px currentColor; }
-        }
-        button {
-            width: 60px; height: 30px; border: none;
-            border-radius: 15px; position: relative; background: black; color: white;
-        }
-        .dark button { background: white; color: black; }
-        button::before {
-            content: ""; position: absolute; width: 24px; height: 24px;
-            background: white; border-radius: 50%; top: 3px; left: 3px;
-            transition: transform 0.3s;
-        }
-        .dark button::before { background: black; transform: translateX(30px); }
-        .favorite-games {
-            background: black; color: white; padding: 2rem;
-            border-radius: 2rem; text-align: center;
-        }
-        .dark .favorite-games { background: white; color: black; }
-        .favorite-games img {
-            max-width: 200px; border-radius: 1rem; margin: 1rem auto;
-        }
-        .fade-in-slide-up {
-            opacity: 0; transform: translateY(30px);
-            animation: fadeSlideUp 1.5s forwards cubic-bezier(.25,.46,.45,.94);
-        }
-        .delay-1 { animation-delay: 0.35s; }
-        .delay-2 { animation-delay: 0.7s; }
-        .delay-3 { animation-delay: 1.05s; }
-        @keyframes fadeSlideUp {
-            to { opacity: 1; transform: translateY(0); }
-        }
-    </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>nathanialihart</title>
+<script src="https://cdn.tailwindcss.com"></script>
+<script src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+<style>
+body {
+    font-family: 'Inter', sans-serif;
+    background: white;
+    color: black;
+    transition: background 0.8s, color 0.8s;
+}
+.dark body { background: black; color: white; }
+#loader {
+    position: fixed; inset: 0; background: black;
+    display: flex; align-items: center; justify-content: center;
+    z-index: 50; transition: opacity 0.8s;
+}
+.fade-out { opacity: 0; pointer-events: none; }
+nav {
+    backdrop-filter: blur(12px);
+    -webkit-backdrop-filter: blur(12px);
+}
+h1 {
+    font-weight: 900; font-size: 2.25rem; text-align: center;
+    animation: glow 2s ease-in-out infinite alternate;
+    color: white;
+    filter: drop-shadow(0 0 10px white);
+}
+.light h1 { color: black; filter: drop-shadow(0 0 10px black); }
+@keyframes glow {
+    from { text-shadow: 0 0 8px currentColor; }
+    to { text-shadow: 0 0 20px currentColor; }
+}
+button {
+    width: 60px; height: 30px; border: none;
+    border-radius: 15px; position: relative;
+    background: black; color: white;
+    box-shadow: 0 0 10px white, 0 0 20px white;
+}
+.dark button {
+    background: white; color: black;
+    box-shadow: 0 0 10px black, 0 0 20px black;
+}
+button::before {
+    content: ""; position: absolute; width: 24px; height: 24px;
+    background: white; border-radius: 50%; top: 3px; left: 3px;
+    transition: transform 0.3s;
+}
+.dark button::before {
+    background: black; transform: translateX(30px);
+}
+.favorite-games {
+    background: black; color: white; padding: 2rem;
+    border-radius: 2rem; text-align: center;
+}
+.dark .favorite-games { background: white; color: black; }
+.favorite-games img {
+    max-width: 200px; border-radius: 1rem; margin: 1rem auto;
+    box-shadow: 0 0 20px rgba(255,255,255,0.2);
+}
+.fade-in-slide-up {
+    opacity: 0; transform: translateY(30px);
+    animation: fadeSlideUp 1.5s forwards cubic-bezier(.25,.46,.45,.94);
+}
+.delay-1 { animation-delay: 0.35s; }
+.delay-2 { animation-delay: 0.7s; }
+.delay-3 { animation-delay: 1.05s; }
+@keyframes fadeSlideUp {
+    to { opacity: 1; transform: translateY(0); }
+}
+</style>
 </head>
 <body>
 
