--- a/index.html
+++ b/index.html
@@ -21,131 +21,72 @@
     }
 " class="scroll-smooth">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>nathanialihart</title>
-<script src="https://cdn.tailwindcss.com"></script>
-<script src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
-<style>
-body {
-    font-family: 'Inter', sans-serif;
-    background: white;
-    color: black;
-    transition: background 0.8s, color 0.8s;
-}
-.dark body { background: black; color: white; }
-#loader {
-    position: fixed; inset: 0; background: black;
-    display: flex; align-items: center; justify-content: center;
-    z-index: 50; transition: opacity 0.8s;
-}
-.fade-out { opacity: 0; pointer-events: none; }
-nav {
-    backdrop-filter: blur(4px);
-    -webkit-backdrop-filter: blur(4px);
-}
-h1 {
-    font-weight: 900; font-size: 2.25rem; text-align: center;
-    animation: glow 2s ease-in-out infinite alternate;
-    color: white;
-    filter: drop-shadow(0 0 4px white);
-}
-.light h1 { color: black; filter: drop-shadow(0 0 4px black); }
-@keyframes glow {
-    from { text-shadow: 0 0 4px currentColor; }
-    to { text-shadow: 0 0 10px currentColor; }
-}
-button.toggle {
-    width: 60px; height: 30px; border: none;
-    border-radius: 15px; position: relative; background: black; color: white;
-    box-shadow: 0 0 6px white;
-}
-.dark button.toggle { background: white; color: black; box-shadow: 0 0 6px black; }
-button.toggle::before {
-    content: ""; position: absolute; width: 24px; height: 24px;
-    background: white; border-radius: 50%; top: 3px; left: 3px;
-    transition: transform 0.3s;
-}
-.dark button.toggle::before { background: black; transform: translateX(30px); }
-.favorite-games {
-    background: black; color: white; padding: 2rem;
-    border-radius: 2rem; text-align: center;
-}
-.dark .favorite-games { background: white; color: black; }
-.favorite-games img {
-    max-width: 250px; border-radius: 1rem; margin: 1rem auto;
-    box-shadow: 0 0 10px rgba(255,255,255,0.15);
-}
-.fade-in-slide-up {
-    opacity: 0; transform: translateY(30px);
-    animation: fadeSlideUp 1.5s forwards cubic-bezier(.25,.46,.45,.94);
-}
-.delay-1 { animation-delay: 0.35s; }
-.delay-2 { animation-delay: 0.7s; }
-.delay-3 { animation-delay: 1.05s; }
-@keyframes fadeSlideUp {
-    to { opacity: 1; transform: translateY(0); }
-}
-a.button {
-    display: inline-block;
-    padding: 0.5rem 1rem;
-    border: 2px solid currentColor;
-    border-radius: 0.5rem;
-    font-weight: 600;
-    text-decoration: none;
-    transition: transform 0.2s, box-shadow 0.2s;
-}
-a.button:hover {
-    transform: scale(1.05);
-    box-shadow: 0 0 10px currentColor;
-}
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>nathanialihart</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+    <style>
+        body { font-family: 'Inter', sans-serif; transition: background 0.8s, color 0.8s; }
+        .dark body { background: black; color: white; }
+        #loader { position: fixed; inset: 0; background: black; display: flex; align-items: center; justify-content: center; z-index: 50; transition: opacity 0.8s; }
+        .fade-out { opacity: 0; pointer-events: none; }
+        h1 { font-weight: 900; font-size: 2.25rem; text-align: center; animation: glow 2s ease-in-out infinite alternate; color: white; }
+        .light h1 { color: black; }
+        @keyframes glow { from { text-shadow: 0 0 6px currentColor; } to { text-shadow: 0 0 12px currentColor; } }
+        .button { display: inline-block; padding: 0.75rem 2rem; border-radius: 9999px; font-weight: 700; font-size: 1.2rem; color: white; background: black; border: 2px solid white; transition: transform 0.2s, box-shadow 0.2s; }
+        .dark .button { color: black; background: white; border: 2px solid black; }
+        .button:hover { transform: scale(1.07); box-shadow: 0 0 12px currentColor; }
+        .button:not(:hover) { transform: scale(0.98); }
+    </style>
+    <script>
+        function openClashRoyale() {
+            const userAgent = navigator.userAgent || navigator.vendor || window.opera;
+            if (/android/i.test(userAgent)) {
+                window.open("https://play.google.com/store/apps/details?id=com.supercell.clashroyale", "_blank");
+            } else if (/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) {
+                window.open("https://apps.apple.com/app/clash-royale/id1053012308", "_blank");
+            } else {
+                window.open("https://clashroyale.com", "_blank");
+            }
+        }
+    </script>
 </head>
 <body>
 
 <div id="loader" x-show="loading" x-transition.opacity></div>
 
-<nav class="flex justify-between items-center max-w-5xl mx-auto sticky top-0 z-40 p-6">
+<nav class="flex justify-between items-center max-w-5xl mx-auto sticky top-0 z-40 p-6 backdrop-blur-md bg-white/20 dark:bg-black/20 rounded-b-xl">
     <h1>nathanialihart</h1>
-    <button class="toggle" @click="darkMode = !darkMode" aria-label="Toggle light and dark mode"></button>
+    <button class="w-14 h-7 rounded-full relative bg-black dark:bg-white" @click="darkMode = !darkMode" aria-label="Toggle light/dark mode">
+        <div class="absolute top-0.5 left-0.5 w-6 h-6 rounded-full bg-white dark:bg-black transition-transform" :class="darkMode ? 'translate-x-7' : ''"></div>
+    </button>
 </nav>
 
-<section class="text-center py-28 px-6 max-w-3xl mx-auto fade-in-slide-up delay-1 select-none">
-    <h2 class="text-6xl md:text-7xl font-extrabold mb-5">
-        Hi, I'm Nathanial, better known as Mango
-    </h2>
-    <p class="text-2xl md:text-3xl max-w-xl mx-auto leading-relaxed">
-        I'm a passionate learner who's currently pursuing the difficult path of computer engineering
-    </p>
+<section class="text-center py-28 px-6 max-w-3xl mx-auto">
+    <h2 class="text-5xl md:text-6xl font-extrabold mb-6">Hi, I'm Nathanial, better known as Mango</h2>
+    <p class="text-xl md:text-2xl max-w-xl mx-auto leading-relaxed">I'm a passionate learner currently pursuing the difficult path of computer engineering.</p>
 </section>
 
-<section class="favorite-games fade-in-slide-up delay-2 select-none">
+<section class="text-center bg-black text-white dark:bg-white dark:text-black py-16 px-6 rounded-3xl max-w-3xl mx-auto">
     <h3 class="text-4xl font-extrabold mb-8">Favorite games</h3>
-    <img src="https://cdn.discordapp.com/attachments/1247891135437955124/1256046498017495111/tds_thumbnail.png" alt="TDS">
-    <p>
-        I like <span>TDS on Roblox</span> — it’s a grindy ass tower defense game that I've been playing for like 5 years
-    </p>
-    <div class="text-center mb-8">
-        <a href="https://www.roblox.com/games/4662002670/Tower-Defense-Simulator" target="_blank" rel="noopener noreferrer" class="button">
-            Play TDS on Roblox
-        </a>
+    <div class="mb-12">
+        <img src="https://cdn.discordapp.com/attachments/1247891135437955124/1256046498017495111/tds_thumbnail.png" alt="TDS" class="mx-auto rounded-xl shadow-lg max-w-xs mb-4">
+        <p class="mb-4">I like <strong>TDS on Roblox</strong> — it’s a grindy tower defense game I've played for 5 years.</p>
+        <a href="https://www.roblox.com/games/4662002670/Tower-Defense-Simulator" target="_blank" rel="noopener noreferrer" class="button">Play TDS on Roblox</a>
     </div>
-    <img src="https://cdn.discordapp.com/attachments/1247891135437955124/1256046498386817034/clash_royale_thumbnail.png" alt="Clash Royale">
-    <p>
-        I also like <span>Clash Royale</span> — a shitty card game with p2w players that make me want to slice my dick off
-    </p>
-    <div class="text-center">
-        <a href="https://clashroyale.com/" target="_blank" rel="noopener noreferrer" class="button">
-            Play Clash Royale
-        </a>
+    <div>
+        <img src="https://cdn.discordapp.com/attachments/1247891135437955124/1256046498386817034/clash_royale_thumbnail.png" alt="Clash Royale" class="mx-auto rounded-xl shadow-lg max-w-xs mb-4">
+        <p class="mb-4">I also like <strong>Clash Royale</strong> — a chaotic card game with sweaty P2W players.</p>
+        <button onclick="openClashRoyale()" class="button">Play Clash Royale</button>
     </div>
 </section>
 
-<section id="anime-section" class="fade-in-slide-up delay-3 select-none text-center py-20 px-6 max-w-4xl mx-auto">
+<section id="anime-section" class="text-center py-20 px-6 max-w-4xl mx-auto">
     <h3 class="text-4xl font-extrabold mb-8">Currently Watching</h3>
     <template x-if="animeList.length === 0">
-        <p>No anime’s detected.</p>
+        <p>No anime detected.</p>
     </template>
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 justify-center" x-show="animeList.length > 0">
         <template x-for="anime in animeList" :key="anime.id">
