--- a/index.html
+++ b/index.html
@@ -66,19 +66,19 @@
 
 <section class="text-center py-28 px-6 max-w-3xl mx-auto">
     <h2 class="text-5xl md:text-6xl font-extrabold mb-6">Hi, I'm Nathanial, better known as Mango</h2>
-    <p class="text-xl md:text-2xl max-w-xl mx-auto leading-relaxed">I'm a passionate learner currently pursuing the difficult path of computer engineering.</p>
+    <p class="text-xl md:text-2xl max-w-xl mx-auto leading-relaxed">I'm a passionate learner currently pursuing the difficult path of computer engineering</p>
 </section>
 
 <section class="text-center bg-black text-white dark:bg-white dark:text-black py-16 px-6 rounded-3xl max-w-3xl mx-auto">
     <h3 class="text-4xl font-extrabold mb-8">Favorite games</h3>
     <div class="mb-12">
         <img src="https://cdn.discordapp.com/attachments/1247891135437955124/1256046498017495111/tds_thumbnail.png" alt="TDS" class="mx-auto rounded-xl shadow-lg max-w-xs mb-4">
-        <p class="mb-4">I like <strong>TDS on Roblox</strong> — it’s a grindy tower defense game I've played for 5 years.</p>
+        <p class="mb-4">I like <strong>TDS on Roblox</strong> — it’s a grindy tower defense game I've played for 5 years</p>
         <a href="https://www.roblox.com/games/4662002670/Tower-Defense-Simulator" target="_blank" rel="noopener noreferrer" class="button">Play TDS on Roblox</a>
     </div>
     <div>
         <img src="https://cdn.discordapp.com/attachments/1247891135437955124/1256046498386817034/clash_royale_thumbnail.png" alt="Clash Royale" class="mx-auto rounded-xl shadow-lg max-w-xs mb-4">
-        <p class="mb-4">I also like <strong>Clash Royale</strong> — a chaotic card game with sweaty P2W players.</p>
+        <p class="mb-4">I also like <strong>Clash Royale</strong> — a shitty game with p2w players and broken cards.. yet i still play it</p>
         <button onclick="openClashRoyale()" class="button">Play Clash Royale</button>
     </div>
 </section>
